add portfolio page with links

--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -98,12 +98,14 @@ body {
     margin: 3% auto;
   }
 
-  button {
+  .portfolio-link {
+    display: inline-block;
     margin: 15% 3%;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
     font-size: 20px;
     border-radius: 25px;
-    background: rgba(247,247,247,0.15);
+    background: rgba(247,247,247,0.5);
     padding: 20px;
     padding-bottom: 5%;
     text-align: center;
@@ -112,6 +114,6 @@ body {
     font-style: italic;
   }
 
-  button:hover {
-    background: rgba(247,247,247,0.5);
+  .portfolio-link:hover {
+    background: rgba(247,247,247,0.15);
   }
