--- a/resume.styles.css
+++ b/resume.styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    border: 1px solid purple;
 }
 
 body {
@@ -7,6 +8,79 @@ body {
 }
 
 .grid-container {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 300px 400px 400px;
+    grid-template-rows: 20% 10% repeat(2, 15%) 10% repeat(2, 15%);
+    justify-content: center;
+}
+
+section:nth-of-type(1) {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+section:nth-of-type(2) {
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+section:nth-of-type(3) {
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+section:nth-of-type(4) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+section:nth-of-type(5) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+section:nth-of-type(6) {
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+
+section:nth-of-type(7) {
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+
+section:nth-of-type(8) {
+    grid-column: 1/3;
+    grid-row: 5/6;
+}
+
+section:nth-of-type(9) {
+    grid-column: 1/2;
+    grid-row: 6/7;
+}
+
+section:nth-of-type(10) {
+    grid-column: 2/3;
+    grid-row: 6/7;
+}
+
+section:nth-of-type(11) {
+    grid-column: 1/2;
+    grid-row: 7/8;
+}
+
+section:nth-of-type(12) {
+    grid-column: 2/3;
+    grid-row: 7/8;
+}
+
+section:nth-of-type(13) {
+    grid-column: 3/4;
+    grid-row: 2/8;
+}
+
+/* .grid-container {
     height: 100%;
     display: grid;
     grid-template-columns: 250px 150px 250px;
@@ -74,4 +148,4 @@ section:nth-of-type(8) {
     background-color: red;
     grid-column: 1/4;
     grid-row: 5/6;
-}
+} */
