add profile image to resume

--- a/resume.styles.css
+++ b/resume.styles.css
@@ -35,6 +35,12 @@ h1 {
     font-weight: 500;
 }
 
+.profile-img {
+    border-radius: 50%;
+    max-width: 100%;
+    height: auto;
+}
+
 h2 {
     text-transform: uppercase;
     margin-bottom: 1rem;
